[OWL-3050] Fixed horizontal scrollbar on the Site Info main page caused by a non-wrapping table cell

--- a/site-manage/site-manage-tool/tool/src/webapp/css/site-manage.css
+++ b/site-manage/site-manage-tool/tool/src/webapp/css/site-manage.css
@@ -593,8 +593,11 @@ input#btnSearch {
     border:none;
 }
 
-#summary th{
-    font-weight: bold;
+#summary th
+{
+    width: 30%;
+    white-space: normal;
+    font-weight: bold;    
 }
 
 #removeClass{
